# ECE574-project

./: README.md  main.yml  pa2.sh  submit.sh
.github/workflows/: buildandtest.yml  main.yml  submit.sh
src/cpp/dpgen/: CMakeLists.txt  build.sh  criticalPath.cpp  critical_path.cpp  critical_path.h  data_list.h  data_type.h  dpgen  genout.sh  main.cpp  parse.cpp  parse.h  path.cpp  path.h  test.sh  verilog_template.vh
src/cpp/dpgen/test/: circuit1.v  circuit1out.txt  circuit1out.v  circuit2.v  circuit2out.txt  circuit2out.v  circuit3.v  circuit3out.txt  circuit3out.v  circuit4.v  circuit4out.txt  circuit4out.v  circuit5.v  circuit5out.txt  circuit5out.v  circuit6.v  circuit6out.txt  circuit6out.v  error1.v  error1out.txt  error2.v  error2out.txt  error3.v  error3out.txt  error3out.v  error4.v  error4out.txt  error4out.v  mcircuit1.v  mcircuit1out.txt  mcircuit1out.v  mcircuit2.v  mcircuit2out.txt  mcircuit2out.v  mcircuit3.v  mcircuit3out.txt  mcircuit3out.v  ucircuit1.v  ucircuit1out.txt  ucircuit1out.v  (+6 more)
src/cpp/gvdpgen/: CMakeLists.txt  Readme.md  main.cpp  main.h.in  parse.h  path.cpp
src/cpp/gvdpgen/test/: test.txt
src/cpp/hlsyn/: CMakeLists.txt  autobuild.sh  bat.sh  build.sh  data_type.h  genout.sh  graph.cpp  graph.h  graph_type.h  hlsm.cpp  hlsm.h  main.cpp  parse.cpp  parse.h  path.cpp  path.h  scheduling.cpp  scheduling.h  sim.sh  test.sh  v_template.h  verilog.cpp  verilog.h
src/cpp/hlsyn/newtest/: hls_lat_test1out.v  hls_lat_test2out.v  hls_lat_test3out.v  hls_lat_test4out.v  hls_lat_test5out.v  hls_lat_test6out.v  hls_test1out.v  hls_test2out.v  hls_test3out.v  hls_test4out.v  hls_test5out.v  hls_test6out.v  hls_test7out.v  hls_test8out.v  mixedcircuit1.c  test_if1out.v  test_if2out.v  test_if4out.v
src/cpp/hlsyn/test/: critpaths.txt  error2out.v  error4out.v  mcircuit1out.v  mcircuit2out.v  mcircuit3out.v  ucircuit1out.v  ucircuit2out.v
src/verilog/: verilog_template.vh
src/verilog/circuits/: 474a_circuit4.v  574a_circuit6.v
src/verilog/modules/: desktop.ini  inc.v  mod.v  shl.v
src/verilog/testbenches/: add_tb.v  comp_tb.v  mod_tb.v  mux2x1_tb.v  shr_tb.v
submission/NetID1_NetID2_dpgen/src/verilog/circuits/: 474a_circuit2.v  574a_circuit5.v
submission/NetID1_NetID2_dpgen/src/verilog/modules/: add.v  div.v  sub.v
submission/NetID1_NetID2_dpgen/src/verilog/testbenches/: div_tb.v  inc_tb.v  mul_tb.v
verilog/circuits/: 474a_circuit1.v  474a_circuit3.v
verilog/modules/: comp.v  dec.v  mul.v  mux2x1.v  reg.v  shr.v
verilog/testbenches/: dec_tb.v  reg_tb.v  shl_tb.v  sub_tb.v
